# mail

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  README.md  module_migration.patch  requirements.txt  test-requirements.txt
base_search_mail_content/: README.rst  __manifest__.py
base_user_signature/: README.rst  __manifest__.py
mail_activity_board/: README.rst  __manifest__.py
mail_activity_dashboard/: README.rst
mail_activity_future_counter/: README.rst
mail_activity_plan_domain/: README.rst  __manifest__.py
mail_activity_reminder/: README.rst  __manifest__.py
mail_activity_team/: README.rst  __manifest__.py
mail_attach_existing_attachment/: README.rst  __manifest__.py
mail_attach_existing_attachment_account/: README.rst  __manifest__.py
mail_autogenerated_header/: README.rst  __manifest__.py
mail_autosubscribe/: __manifest__.py
mail_chatter_split/: README.rst  __manifest__.py  pyproject.toml
mail_composer_cc_bcc/: README.rst
mail_drop_target/: README.rst  __manifest__.py
mail_extra_header/: README.rst
mail_forward/: README.rst  __manifest__.py
mail_layout_force/: README.rst  __manifest__.py
mail_message_search/: README.rst  __manifest__.py
mail_no_user_assign_notification/: README.rst  __manifest__.py
mail_notification_custom_subject/: README.rst  __manifest__.py
mail_notification_link/: README.rst
mail_notification_sound_volume/: README.rst  __init__.py  __manifest__.py
mail_notify_employee_leave/: README.rst  __manifest__.py
mail_optional_autofollow/: README.rst  __manifest__.py
mail_optional_follower_notification/: README.rst
mail_outbound_static/: README.rst  __manifest__.py
mail_partner_opt_out/: README.rst  __manifest__.py
mail_post_defer/: README.rst  __manifest__.py  hooks.py
mail_restrict_follower_selection/: README.rst  __init__.py  __manifest__.py
mail_restrict_send_button/: README.rst  __manifest__.py
mail_send_confirmation/: README.rst  __manifest__.py
mail_sent_history/: README.rst  __manifest__.py
mail_show_follower/: README.rst
mail_suggested_recipient_unchecked/: README.rst
setup/_metapackage/: pyproject.toml
(+346 files in other folders)
