[project]
name = "odoo-addons-oca-mail"
version = "17.0.20260512.0"
dependencies = [
    "odoo-addon-mail_activity_future_counter>=17.0dev,<17.1dev",
    "odoo-addon-mail_chatter_split>=17.0dev,<17.1dev",
    "odoo-addon-mail_message_search>=17.0dev,<17.1dev",
    "odoo-addon-mail_notification_link>=17.0dev,<17.1dev",
    "odoo-addon-mail_notification_sound_volume>=17.0dev,<17.1dev",
    "odoo-addon-mail_notify_employee_leave>=17.0dev,<17.1dev",
    "odoo-addon-mail_sent_history>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
